# svag

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tmpl.md  TODO.md  bench-svgo.mjs  package-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: fetch-test-corpus.sh  generate-readme.sh
src/: ast.rs  error.rs  fonts.rs  lib.rs  main.rs  optimize.rs  parse.rs  path.rs  serialize.rs
tests/: corpus_test.rs  fonts_integration.rs  visual.rs
xtask/: Cargo.toml
xtask/src/: main.rs
